<resources>
    <string name="app_name">3_lab</string>
    <string name="DelOne"><![CDATA[<-]]></string>
    <string name="ClrAll">C</string>
    <string name="equals">=</string>
    <string name="six">6</string>
    <string name="power">x^2</string>
    <string name="seven">7</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="percent">%</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="inverse">1/x</string>
    <string name="clrInput">CE</string>
    <string name="divide">/</string>
    <string name="eight">8</string>
    <string name="four">4</string>
    <string name="two">2</string>
    <string name="dot">.</string>
    <string name="root">√</string>
    <string name="changeSign">+/-</string>
</resources>